--- a/index.html
+++ b/index.html
@@ -10,29 +10,35 @@
 </head>
 
 <body>
-    <!-- 导航栏 -->
+    <!-- 简约浅色导航栏 -->
     <header class="header">
-        <div class="container">
-            <div class="header-content">
-                <div class="logo">
-                    <h1><a href="#">动态博客</a></h1>
-                </div>
-                <nav class="nav">
-                    <ul>
-                        <li><a href="#" class="active">首页</a></li>
-                        <li><a href="#" data-category="技术">技术</a></li>
-                        <li><a href="#" data-category="生活">生活</a></li>
-                        <li><a href="#" data-category="旅行">旅行</a></li>
-                        <li><a href="#" data-category="美食">美食</a></li>
-                    </ul>
-                </nav>
-                <div class="search-box">
-                    <input type="text" id="searchInput" placeholder="搜索博客...">
-                    <button id="searchBtn"><i class="fas fa-search"></i></button>
-                </div>
-            </div>
-        </div>
+        <nav class="nav">
+            <ul>
+                <li><a href="#" class="active">首页</a></li>
+                <li><a href="#">游戏站点</a></li>
+                <li><a href="#">短剧</a></li>
+                <li><a href="#">影视类</a></li>
+            </ul>
+        </nav>
     </header>
+
+    <!-- 主视觉区域 -->
+    <section class="hero-section">
+        <!-- 动漫插画背景 -->
+        <div class="hero-image">
+            <img src="project/preview.jpg" alt="蓝发双马尾少女">
+        </div>
+        <!-- 底部波纹效果 -->
+        <div class="hero-waves">
+            <div class="wave wave-1"></div>
+            <div class="wave wave-2"></div>
+            <div class="wave wave-3"></div>
+        </div>
+        <!-- 文艺文字 -->
+        <div class="hero-text">
+            <p>人类侥幸拥有了智慧，就应该善用它</p>
+        </div>
+    </section>
 
     <!-- 主要内容区 -->
     <main class="main">
