--- a/login.html
+++ b/login.html
@@ -10,52 +10,34 @@
 </head>
 
 <body class="login-page">
+    <!-- 动态壁纸容器 -->
+    <div class="dynamic-wallpaper">
+        <!-- 视频背景 -->
+        <video autoplay muted loop class="background-video">
+            <source src="project/12月18日 (1).mp4" type="video/mp4">
+        </video>
+        <!-- 背景叠加层 -->
+        <div class="wallpaper-overlay"></div>
+    </div>
+
+    <!-- 登录容器 -->
     <div class="login-container">
-        <div class="login-left">
-            <div class="login-brand">
-                <h1>动态博客</h1>
-                <p>探索无限可能的世界</p>
-                <div class="login-features">
-                    <div class="feature-item">
-                        <i class="fas fa-book"></i>
-                        <span>丰富的内容</span>
-                    </div>
-                    <div class="feature-item">
-                        <i class="fas fa-comments"></i>
-                        <span>活跃的社区</span>
-                    </div>
-                    <div class="feature-item">
-                        <i class="fas fa-star"></i>
-                        <span>优质的体验</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="login-right">
-            <div class="login-form-wrapper">
+        <div class="login-form-wrapper">
+
+
+            <div class="login-form-container">
                 <h2>欢迎回来</h2>
                 <p class="login-subtitle">请登录您的账号</p>
-                <form id="loginForm" class="login-form">
+                <form id="loginForm" class="login-form" novalidate>
                     <div class="form-group">
-                        <label for="username">
-                            <i class="fas fa-user"></i>
-                            用户名
-                        </label>
+                        <label for="username" class="visually-hidden">用户名</label>
                         <input type="text" id="username" placeholder="请输入用户名" required>
                     </div>
                     <div class="form-group">
-                        <label for="password">
-                            <i class="fas fa-lock"></i>
-                            密码
-                        </label>
+                        <label for="password" class="visually-hidden">密码</label>
                         <input type="password" id="password" placeholder="请输入密码" required>
                     </div>
-                    <div class="form-options">
-                        <label class="remember-me">
-                            <input type="checkbox" id="rememberMe">
-                            <span>记住我</span>
-                        </label>
-                    </div>
+
                     <div class="form-group">
                         <button type="submit" class="btn btn-primary">
                             <i class="fas fa-sign-in-alt"></i>
@@ -64,10 +46,11 @@
                     </div>
                     <div class="error-message" id="errorMessage"></div>
                 </form>
-
             </div>
         </div>
     </div>
+
+
 
     <script src="login.js"></script>
 </body>
